# nu_plugin_socket

./: .gitignore  Cargo.toml  LICENSE  README.md  build.nu
.github/workflows/: release.yml
src/: connect.SAV.rs  connect.rs  listen.rs  main.rs
