[package]
name = "nu_plugin_socket"
version = "0.1.0"
edition = "2021"
authors = ["Iļja Ketris <ikel@vo.id.lv>"]

description = "A Nushell plugin for low-level TCP and UDP socket communication."

repository = "https://github.com/punund/nu_plugin_socket"

readme = "README.md"

license = "MIT"

keywords = ["nushell", "plugin", "socket", "tcp", "udp"]

categories = ["command-line-utilities", "network-programming"]


[dependencies]
nu-plugin = "0.108.0"
nu-protocol = "0.108.0"
